# EveryLauncher

./: .gitignore  .gitmodules  CMakeLists.txt  EveryLauncher.desktop  EveryLauncher.pro  README  README.md  config.h.in
dbus/: com.gitee.wanywhn.EveryLauncher.service  com.gitee.wanywhn.everylauncher.service
debian/: changelog  control
filters/: ppt-dump.py  rcl7z  rclaudio  rclchm  rclconfig.py  rcldesktop.py  rcldesktop.sh  rcldia  rcldjvu.py  rcldoc.py  rclepub  rclepub1  rclexec1.py  rclics  rclimg  rclimg.py  rclimg_ocr.py  rclinfo  rclkar  rcllatinclass.py  rclokulnote  rclopxml.py  rclpdf.py  rclppt.py  rclpython  rclrar  rclrtf.py  rclsoff-flat.py  rclsoff.py  rclsvg.py  rcltar  rcltext.py  rcluncomp.py  rclwar  rclxls.py  rclxml.py  rclxmp.py  rclxslt.py  rclzip  recoll-we-move-files.py  (+2 more)
launcher/: config.py  main.py
launcher/ui/: ConfigListWidget.py  IndexSche.py  MainWindow.py  PreferenceWindow.py  SystemTray.py
launcher/ui/QML/: CategroyFilter.qml  ItemDelegate.qml  ItemDelegate.qml.autosave  ItemHighlightBar.qml  ResItemDelegate.qml  SearchCateHeader.qml  main.qml  main.qml.autosave
launcher/ui/model/: recollQueryModel.py
launcher/util/: Settings.py
launcher/utils/: utils.py
recoll_conf/: fields  history  mimeconf  mimemap  mimeview  recoll.conf  recoll.conf.in
src/: BaiduMap.html  CMakeLists.txt  ELModelInterface.h  EveryLauncherAdaptor.cpp  EveryLauncherAdaptor.h  EveryLauncherInterface.cpp  EveryLauncherInterface.h  GaoDeMap.html  IndexModule.cpp  IndexModule.h  SearchItemDelegate.cpp  SearchItemDelegate.h  com.gitee.wanywhn.EveryLauncher.xml  config.h  config.h.in  configlistwidget.cpp  configlistwidget.h  configsearchengine.cpp  configsearchengine.h  dbusproxy.cpp  dbusproxy.h  detailedwidget.cpp  detailedwidget.h  everylauncher_adaptor.cpp  everylauncher_adaptor.h  everylauncher_interface.cpp  everylauncher_interface.h  everylaunchermonitor_interface.cpp  everylaunchermonitor_interface.h  firsttimeinit.cpp  firsttimeinit.h  guiutils.cpp  guiutils.h  indexsche.cpp  indexsche.h  keymonitor.cpp  keymonitor.h  listitemwidget.cpp  listitemwidget.h  main.cpp  (+21 more)
src/Detailed/: WeatherPreview.cpp  WeatherPreview.h  desktoppreview.cpp  desktoppreview.h  detailedtext.cpp  detailedtext.h  imagepreview.cpp  imagepreview.h  map_preview.cpp  map_preview.h  pdfpreview.cpp  pdfpreview.h  preview_load.cpp  preview_load.h  preview_plaintorich.cpp  preview_plaintorich.h  preview_w.cpp  preview_w.h  previewtextedit.cpp  previewtextedit.h  text_preview.cpp  text_preview.h
src/Detailed/player/: player.cpp  player.h  playercontrols.cpp  playercontrols.h
src/Model/: ELModelInterface.cpp  ELModelInterface.h  ModelWeather.cpp  ModelWeather.h  map_model.cpp  map_model.h  recollmodel.cpp  recollmodel.h  unitedmodel.cpp  unitedmodel.h
src/confgui/: ConfigModelEngin.cpp  ConfigModelEngin.h  confgui.cpp  confgui.h  confguiindex.cpp  confguiindex.h  configsearchengine.cpp
